perf. adds lazy loading to modal profile pics

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
           alt="Dr. Harald Bergerhoff, Allgemeinarzt, Wermelskirchen"
           width="219"
           height="328"
+          loading="lazy"
         />
         <h2>Harald Bergerhoff</h2>
         <h3>Facharzt für Allgemeinmedizin</h3>
@@ -634,6 +635,7 @@
           alt="Cornelia Eisenhuth"
           width="219"
           height="328"
+          loading="lazy"
         />
         <h2>Cornelia Eisenhuth</h2>
         <h3>Studium der Gartenbauwissenschaft</h3>
@@ -652,6 +654,7 @@
           alt="Melanie Groß"
           width="219"
           height="328"
+          loading="lazy"
         />
         <h2>Melanie Groß</h2>
         <h3>Medizinische Fachangestellte</h3>
@@ -675,6 +678,7 @@
           alt="Carmen Menz"
           width="219"
           height="328"
+          loading="lazy"
         />
         <h2>Carmen Menz</h2>
         <h3>Medizinische Fachangestellte</h3>
@@ -699,6 +703,7 @@
           alt="Miriam Hartmann"
           width="219"
           height="328"
+          loading="lazy"
         />
         <h2>Miriam Hartmann</h2>
         <h3>Medizinische Fachangestellte</h3>
