refactor: now uses css to lock screen when modal open

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </title>
   </head>
 
-  <body>
+  <body id="bodyElement">
     <div class="topSection">
       <nav>
         <a href="html/leistungen.html">leistungen</a>
