feat[style]: adds email to contact info and adjusts css to accomodate wider window

--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
           <span class="subheader">Rezepttelefon</span>
           02196 886290
 
+          <span class="subheader">E-Mail</span>
+          <a href="mailto:hausarztpraxis-ors32@t-online.de"
+            >hausarztpraxis-ors32@t-online.de</a
+          >
+
           <span class="subheader">Fax</span>
           02196 974886
         </address>
