feat: removes Eisenhuth profile, adds Gerstners, and updates group photo and click positions

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
           </h3>
           <img
             class="groupPhoto"
-            src="./images/Gruppenfoto_410x280px.webp"
+            src="./images/Gruppenfoto_410x273px.webp"
             width="410"
-            height="280"
+            height="273"
             srcset="
-              ./images/Gruppenfoto_410x280px.webp 410w,
-              ./images/Gruppenfoto_805x549px.webp 805w
+              ./images/Gruppenfoto_410x273px.webp 410w,
+              ./images/Gruppenfoto_805x537px.webp 805w
             "
             sizes="(max-width: 400px) 410px"
             alt="Praxis Team von Praxis Dr. Bergerhoff"
@@ -147,10 +147,10 @@
           ></div>
           <div
             tabindex="0"
-            class="heads eisenhuthInfo"
-            id="eisenhuthSelector"
+            class="heads gerstnerInfo"
+            id="gerstnerSelector"
             role="button"
-            aria-label="Auswählen, um mehr Info zu Cornelia Eisenhuth lesen"
+            aria-label="Auswählen, um mehr Info zu Dr. Martin Gerstner lesen"
           ></div>
           <div
             tabindex="0"
@@ -635,24 +635,66 @@
           </li>
         </ul>
       </section>
-      <section hidden id="eisenhuthWindow" class="popups">
+      <section hidden id="gerstnerWindow" class="popups">
         <img
-          src="images/Eisenhuth_profil.webp"
-          alt="Cornelia Eisenhuth"
+          src="images/Gerstner_profil.webp"
+          alt="Dr. Martin Gerstner"
           width="219"
-          height="328"
+          height="262"
           loading="lazy"
         />
-        <h2>Cornelia Eisenhuth</h2>
-        <h3>Studium der Gartenbauwissenschaft</h3>
-        <p>
-          Nach Elternzeit 2001 Quereinstieg in die Praxis ihres Bruders Herrn
-          Bergerhoff
-        </p>
-        <p>
-          Seitdem ist Frau Eisenhuth für EDV und Abrechnung und vertritt in
-          Krankheitsfällen und im Urlaub ihre Kolleginnen an der Rezeption
-        </p>
+        <h2>Dr. Martin Gerstner</h2>
+        <ul>
+          <li>1997&mdash;2004</li>
+          <li>Studium der Medizin an der Universität zu Köln</li>
+        </ul>
+        <ul>
+          <li>2004</li>
+          <li>Approbation und Promotion</li>
+        </ul>
+        <ul>
+          <li>2004&mdash;2009</li>
+          <li>Assistenzarzt der Inneren Medizin am Klinikum Holweide, Köln</li>
+        </ul>
+        <ul>
+          <li>2009&mdash;2014</li>
+          <li>Assistenz-/ Facharzt der Anästhesie am Klinikum Leverkusen</li>
+        </ul>
+        <ul>
+          <li>2014</li>
+          <li>Zusatzbezeichnung Intensivmedizin</li>
+        </ul>
+        <ul>
+          <li>2014</li>
+          <li>Zusatzbezeichnung Notfallmedizin, seit 2008 Notarzt</li>
+        </ul>
+        <ul>
+          <li>2014&mdash;2017</li>
+          <li>
+            Facharzt der Anästhesie an der Uniklinik Köln<br />Schwerpunkt:
+            Kardio-/ Kinderkardioanästhesie
+          </li>
+        </ul>
+
+        <ul>
+          <li>2017&mdash;2021</li>
+          <li>
+            Oberarzt der Anästhesie im Petrus Krankenhaus Wuppertal und im
+            Krankenhaus der Augustinerinnen (Severinsklösterchen) Köln<br />Schwerpunkte:
+            Leitung der Intensivstation und des Kreissaals
+          </li>
+        </ul>
+        <ul>
+          <li>2021&mdash;2023</li>
+          <li>Freiberufliche Tätigkeit als Anästhesist</li>
+        </ul>
+        <ul>
+          <li>Seit 4/2024</li>
+          <li>
+            Weiterbildungsassistent d. Allgemeinmedizin in der Hausarztpraxis
+            Harald Bergerhoff
+          </li>
+        </ul>
       </section>
       <section hidden id="melanieWindow" class="melaniePopup popups">
         <img
