--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/index-v2.css" />
 
     <!--JS-->
     <script src="./index.js" defer></script>
