build: cache busting

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <link rel="stylesheet" href="styles/index-v2.css" />
 
     <!--JS-->
-    <script src="./index.js" defer></script>
+    <script src="./index-v2.js" defer></script>
 
     <title>
       Hausarzt & Betriebsmedizin | Wermelskirchen | Praxis Bergerhoff
