feat: replace Group Photo that had clickable areas with individual portrait photos

--- a/index.html
+++ b/index.html
@@ -123,56 +123,69 @@
           />
         </svg>
         <div class="photoAndHeads">
-          <h3 class="teamPhotoContainer__caption">
-            Das Praxis-Team: Klicken Sie auf uns ...
-          </h3>
-          <img
-            class="groupPhoto"
-            src="./images/Gruppenfoto_410x273px.webp"
-            width="410"
-            height="273"
-            srcset="
-              ./images/Gruppenfoto_410x273px.webp 410w,
-              ./images/Gruppenfoto_805x537px.webp 805w
-            "
-            sizes="(max-width: 400px) 410px"
-            alt="Praxis Team von Praxis Dr. Bergerhoff"
-          />
-          <div
-            tabindex="0"
-            class="heads harryInfo"
-            id="harrySelector"
-            role="button"
-            aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen"
-          ></div>
-          <div
-            tabindex="0"
-            class="heads carmenInfo"
-            id="carmenSelector"
-            role="button"
-            aria-label="Auswählen, um mehr Info zu Carmen Menz lesen"
-          ></div>
-          <div
-            tabindex="0"
-            class="heads melanieInfo"
-            id="melanieSelector"
-            role="button"
-            aria-label="Auswählen, um mehr Info zu Melanie Groß lesen"
-          ></div>
-          <div
-            tabindex="0"
-            class="heads miriamInfo"
-            id="miriamSelector"
-            role="button"
-            aria-label="Auswählen, um mehr Info zu Miriam Hartmann lesen"
-          ></div>
-          <div
-            tabindex="0"
-            class="heads gerstnerInfo"
-            id="gerstnerSelector"
-            role="button"
-            aria-label="Auswählen, um mehr Info zu Dr. Martin Gerstner lesen"
-          ></div>
+          <h3 class="teamPhotoContainer__caption">Das Praxis-Team</h3>
+          <div class="groupPhoto">
+            <button
+              type="button"
+              class="heads__btn"
+              id="harrySelector"
+              title="Auswählen, um mehr Info zu Harald Bergerhoff lesen"
+            >
+              <img
+                class="heads__img"
+                src="images/Bergerhoff_profil.webp"
+                alt="Dr. Harald Bergerhoff, Allgemeinarzt, Wermelskirchen"
+                width="219"
+                height="328"
+                loading="lazy"
+              />
+            </button>
+            <button
+              type="button"
+              class="heads__btn"
+              id="carmenSelector"
+              title="Auswählen, um mehr Info zu Carmen Menz lesen"
+            >
+              <img
+                class="heads__img"
+                src="images/Carmen_profil.webp"
+                alt="Carmen Menz"
+                width="219"
+                height="328"
+                loading="lazy"
+              />
+            </button>
+            <button
+              type="button"
+              class="heads__btn"
+              id="melanieSelector"
+              title="Auswählen, um mehr Info zu Melanie Groß lesen"
+            >
+              <img
+                class="heads__img"
+                src="images/Melanie_profil.webp"
+                alt="Melanie Groß"
+                width="219"
+                height="328"
+                loading="lazy"
+              />
+            </button>
+            <button
+              type="button"
+              class="heads__btn"
+              id="miriamSelector"
+              title="Auswählen, um mehr Info zu Miriam Hartmann lesen"
+            >
+              <img
+                class="heads__img"
+                src="images/Miriam_profil.webp"
+                alt="Miriam Hartmann"
+                width="219"
+                height="328"
+                loading="lazy"
+              />
+            </button>
+          </div>
         </div>
       </div>
 
