--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="cache-control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
     <link rel="canonical" href="https://www.praxisbergerhoff.de" />
     <meta
       name="description"
@@ -56,10 +62,10 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/index-v2.css" />
+    <link rel="stylesheet" href="styles/index-v3.css" />
 
     <!--JS-->
-    <script src="./index-v2.js" defer></script>
+    <script src="./index-v3.js" defer></script>
 
     <title>
       Hausarzt & Betriebsmedizin | Wermelskirchen | Praxis Bergerhoff
