feat: adds Claudi btn

--- a/index.html
+++ b/index.html
@@ -177,6 +177,22 @@
                 loading="lazy"
               />
             </button>
+
+            <button
+              type="button"
+              class="heads__btn"
+              id="claudiaSelector"
+              title="Auswählen, um mehr Info zu Claudia Afentakis lesen"
+            >
+              <img
+                class="heads__img"
+                src="images/Claudia_profil.webp"
+                alt="Claudia Afentakis"
+                width="219"
+                height="328"
+                loading="lazy"
+              />
+            </button>
           </div>
         </div>
       </div>
