feat: adds Claudia bio

--- a/index.html
+++ b/index.html
@@ -718,6 +718,27 @@
         </ul>
         <p>Diabetologische Fortbildungen und Schulungen im Wundmanagement</p>
       </section>
+
+      <section hidden id="claudiaWindow" class="popups">
+        <div class="popup__closeButtonWrapper">
+          <button id="claudiaCloseBtn" type="button" class="popup__closeButton">
+            X
+          </button>
+        </div>
+        <img
+          src="images/Claudia_profil.webp"
+          alt="Claudia Afentakis"
+          width="219"
+          height="328"
+          loading="lazy"
+        />
+        <h2>Claudia Afentakis</h2>
+        <h3>Rezeption</h3>
+        <p>
+          Seit 01.12.2024 arbeite ich als Quereinsteigerin in der Praxis und bin
+          überwiegend an der Rezeption tätig.
+        </p>
+      </section>
     </div>
 
     <footer>
