feat: remove Stefanie profile and related modal window

--- a/index.html
+++ b/index.html
@@ -101,14 +101,6 @@
         height="6"
         aria-hidden="true"
       />
-      <img
-        class="lineToPhoto3 lineVert"
-        src="images/redLineVert100px.svg"
-        alt=""
-        width="6"
-        height="100"
-        aria-hidden="true"
-      />
       <div class="lineMaskTop lineMask"></div>
       <div class="teamPhotoContainer">
         <svg
@@ -155,25 +147,17 @@
                 loading="lazy"
               />
             </button>
-              <button
-                      type="button"
-                      class="heads__btn"
-                      id="stefanieSelector"
-                      title="Auswählen, um mehr Info zu Stefanie Schröder lesen"
-              >
-                  <img
-                          class="heads__img"
-                          src="images/stefanie_profil.jpg"
-                          alt="Stefanie Schröder"
-                          width="219"
-                          height="308"
-                          loading="lazy"
-                  />
-              </button>
           </div>
         </div>
       </div>
-
+      <img
+         class="lineFromPhoto1 lineVert"
+         src="images/redLineVert100px.svg"
+         alt=""
+         width="6"
+         height="100"
+         aria-hidden="true"
+        />
       <img
         class="lineToOpening line"
         src="images/redHorizontalLineMedium.svg"
@@ -182,7 +166,6 @@
         height="6"
         aria-hidden="true"
       />
-
       <div class="openingTimesContainer container">
         <div class="clockContainer">
           <svg
@@ -656,63 +639,6 @@
           überwiegend an der Rezeption tätig.
         </p>
       </section>
-
-        <section hidden id="stefanieWindow" class="popups">
-            <div class="popup__closeButtonWrapper">
-                <button id="stefanieCloseBtn" type="button" class="popup__closeButton">
-                    X
-                </button>
-            </div>
-            <img
-                    src="images/stefanie_profil.jpg"
-                    alt="Stefanie Schröder"
-                    width="219"
-                    height="308"
-                    loading="lazy"
-            />
-            <h2>Stefanie Schröder</h2>
-            <ul>
-                <li>
-                    1994&mdash;1997
-                </li>
-                <li>
-                    Berufsausbildung zur Arzthelferin bei Dr. Thomas
-                    Kuske
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    1997&mdash;1999
-                </li>
-                <li>
-                    Praxis Dr. Kuske
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    1999&mdash;2003
-                </li>
-                <li>
-                    Praxis Frau Dr. Rost-Meyer
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    2016&mdash;2017
-                </li>
-                <li>
-                    Praxis Frau Dr. Rost-Meyer (Krankheitsvertretung)
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    2017&mdash;2025
-                </li>
-                <li>
-                    Schulbegleitung
-                </li>
-            </ul>
-        </section>
     </div>
 
     <footer>
